force-app/main/default/objects/Completion_Form_Configuration__c/Completion_Form_Configuration__c.object-meta.xml
<CustomObject>
    <description>This object is used to configure the completion forms by Vendor. (PVFSL-603)</description>
    <label>Completion Form Configuration</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Completion Form Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>