force-app/main/default/objects/Completion_Form_Configuration__c/fields/Completion_Form_Template__c.field-meta.xml
<CustomField>
    <fullName>Completion_Form_Template__c</fullName>
    <label>Completion Form Template</label>
    <referenceTo>Completion_Form_Template__c</referenceTo>
    <relationshipLabel>Completion Form Configurations</relationshipLabel>
    <relationshipName>Completion_Form_Configurations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>