force-app/main/default/objects/Completion_Form_Configuration__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>This field references the field from the Work Order. (PVFSL-603)</description>
    <inlineHelpText>This field references the field from the Work Order.</inlineHelpText>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>