force-app/main/default/objects/Completion_Form_Configuration__c/fields/Field_Description__c.field-meta.xml
<CustomField>
    <fullName>Field_Description__c</fullName>
    <description>This field stores the description for the input field. (PVFSL-603)</description>
    <inlineHelpText>This field stores the description for the input field</inlineHelpText>
    <label>Field Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>