force-app/main/default/objects/Completion_Form_Configuration__c/fields/Order_Within_Section__c.field-meta.xml
<CustomField>
    <fullName>Order_Within_Section__c</fullName>
    <description>This field controls the order of the field within the section, a field with order 2 is going to be displayed before a field with order 5. (PVFSL-603)</description>
    <inlineHelpText>This field controls the order of the field within the section, a field with order 2 is going to be displayed before a field with order 5</inlineHelpText>
    <label>Order Within Section</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>