force-app/main/default/objects/Completion_Form_Configuration__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(PVFSL-603)</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>