force-app/main/default/objects/Completion_Form_Configuration__c/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <description>Section in which to display this field in the completion form. (PVFSL-603)</description>
    <inlineHelpText>Section in which to display this field in the completion form</inlineHelpText>
    <label>Section Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>